--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "build:css": "tailwindcss build src/styles/tailwind.css -o src/styles/output.css"
-
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.20",
     "autoprefixer": "^10.4.16",
+    "axios": "^1.6.2",
     "cors": "^2.8.5",
     "postcss": "^8.4.32",
     "react": "^18.2.0",
